[206816]  DB2 for z/OS:  Need a way for user to specify filter based on TB creator

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/plugin.properties
@@ -16,6 +16,7 @@ driverVendor = Vendor
 driverVersion = Version
 driverDBName = Database Name
 driverConnectionURL = Connection URL
+filterOnTBCreator = Retrieve Objects Created By This User Only
 driverUID = User ID
 driverPWD = Password
 
