[206824]  Oracle:  Need a way for user to specify filter based on catalog

--- a/plugins/org.eclipse.datatools.enablement.oracle/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oracle/plugin.properties
@@ -16,6 +16,7 @@ driverVendor = Vendor
 driverVersion = Version
 driverDBName = Database Name
 driverConnectionURL = Connection URL
+catalogType = Catalog
 driverUID = User ID
 driverPWD = Password
 
