[BZ194859] repurpose DSE content/actions for other viewers

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -34,7 +34,7 @@ DSE.ShowCategory.tooltip = Show Category
 DSE.Name = Data Source Explorer
 DSE.ContentExtension.Decorator = Connection Profile Decorator
 DSE.ContentExtension.Decorator.Description = Decorate content extension node when connecting to the server fails.
-DSE.content = Data Source Explorer Extension
+DSE.content.extended = Data Source Explorer Extension w/Drop Support
 
 category.name.dataTools = SQL Development
 category.name.connectivity = Connectivity
