--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -22,3 +22,5 @@ Extension.NewRepositoryWizard.Description = Create a new repository for connecti
 datatools.preference.page.name=Connectivity
 drivers.preference.page.name = Driver Definitions
 category.name.connectionProfiles = Connection Profiles
+
+DSE.content = Data Source Explorer Extension
