[207849]  Various accessibility and cosmetic issues in connectivity dialogs,wizards

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -30,9 +30,9 @@ dialog.exception.message = Exception caught: {0}
 NewCPWizard.title = New Connection Profile
 IntroductionWizardPage.title = Introduction Page
 IntroductionWizardPage.intro = This wizard walks through the steps to create a connection profile.
-CPWizardSelectionPage.title = Wizard Selection Page
-CPWizardSelectionPage.desc = Select a connection profile type to proceed
-CPWizardSelectionPage.group = Please select the connection profile type:
+CPWizardSelectionPage.title = Connection Profile
+CPWizardSelectionPage.desc = Select a connection profile type.
+CPWizardSelectionPage.group = &Connection Profile Types:
 actions.connect.job = Connect server job
 actions.connect.uijob = Refreshing View
 actions.ping.job = Ping server job
@@ -60,14 +60,14 @@ NewConnectionProfileWizard.create.failure = Create connection profile failure
 NewConnectionProfileWizardPage.Status.DuplicateName = Connection profile name already exists!
 NewConnectionProfileWizardPage.Status.NoName = Please specify connection profile name!
 NewConnectionProfileWizardPage.Status.NoRepository = Please specify a repository.
-NewConnectionProfileWizardPage.title = Create connection profile
-NewConnectionProfileWizardPage.desc = Please enter detailed information
-NewConnectionProfileWizardPage.cp_name = Name:
-NewConnectionProfileWizardPage.cp_desc = Description(optional):
+NewConnectionProfileWizardPage.title = Create Connection Profile
+NewConnectionProfileWizardPage.desc = Enter the profile information.
+NewConnectionProfileWizardPage.cp_name = Na&me:
+NewConnectionProfileWizardPage.cp_desc = &Description (optional):
 NewConnectionProfileWizardPage.choices = Please select:
 NewConnectionProfileWizardPage.summary_cp_name = Name
 NewConnectionProfileWizardPage.summary_cp_desc = Description
-NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect at startup.
+NewConnectionProfileWizardPage.Button.AutoConnect = &Auto-connect at startup
 NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect at startup.
 NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
 NewConnectionProfileWizardPage.localRepository = Create in workspace repository (local)
