--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
@@ -1,6 +1,7 @@
 wizard.asa.multi.action = Create Multiple ASA Profiles
 profile.asa.title = Sybase ASA
 profile.asa.wizard.title = Sybase ASA
+profile.asa.wizard.description = Create a Sybase ASA connection profile.
 jdbc.connection.name = JDBC Connection
 profile.asa.properties = Sybase ASA Connection Properties
 9.xProductString = Sybase Adaptive Server Anywhere (ASA)
