[207859]  Added descriptions for various connection profile wizards

--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.properties
@@ -12,4 +12,5 @@ pluginName=Eclipse Data Tools Platform Microsoft SQL Server UI Plug-in
 providerName=Eclipse.org
 
 profile.sqlserver.wizard.title = SQL Server
+profile.sqlserver.wizard.description = Create a SQL Server connection profile.
 profile.sqlserver.properties = SQL Server Connection Properties
