--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.xml
@@ -8,6 +8,7 @@
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.enablement.msft.sqlserver.NewSQLServerConnectionProfileWizard"
             name="%profile.sqlserver.wizard.title"
+            description = "%profile.sqlserver.wizard.description"
             profile="org.eclipse.datatools.enablement.msft.sqlserver.connectionProfile"/>
    </extension>
    <extension
