[207859]  Added descriptions for various connection profile wizards

--- a/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.properties
@@ -12,4 +12,5 @@ pluginName=Eclipse Data Tools Platform Oracle UI Plug-in
 providerName=Eclipse.org
 
 profile.oracle.wizard.title = Oracle
+profile.oracle.wizard.description = Create an Oracle connection profile.
 profile.oracle.properties = Oracle Connection Properties
