--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.properties
@@ -12,4 +12,5 @@ pluginName=Eclipse Data Tools Platform IBM DB2 UDB LUW UI Plug-in
 providerName=Eclipse.org
 
 profile.db2.luw.wizard.title = DB2 for Linux, UNIX, and Windows
+profile.db2.luw.wizard.description = Create a DB2 for Linux, UNIX, and Windows connection profile.
 profile.db2.luw.properties = DB2 for Linux, UNIX, and Windows Connection Properties
