--- a/plugins/org.eclipse.datatools.enablement.ibm.informix.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.informix.ui/plugin.properties
@@ -12,4 +12,5 @@ pluginName=Eclipse Data Tools Platform Informix UI Plug-in
 providerName=Eclipse.org
 
 profile.informix.wizard.title = Informix
+profile.informix.wizard.description = Create an Informix connection profile.
 profile.informix.properties = Informix Connection Properties
