--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/plugin.properties
@@ -12,4 +12,5 @@ pluginName=Eclipse Data Tools Platform IBM DB2 UDB UI iSeries Plug-in
 providerName=Eclipse.org
 
 profile.db2.iseries.wizard.title = DB2 for i5/OS
+profile.db2.iseries.wizard.description = Create a DB2 for i5/OS connection profile.
 profile.db2.iseries.properties = DB2 for i5/OS Connection Properties
