--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.xml
@@ -8,6 +8,7 @@
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.enablement.ibm.db2.luw.NewLUWConnectionProfileWizard"
             name="%profile.db2.luw.wizard.title"
+            description = "%profile.db2.luw.wizard.description"
             profile="org.eclipse.datatools.enablement.ibm.db2.luw.connectionProfile"/>
    </extension>
    <extension
