--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/plugin.properties
@@ -12,4 +12,5 @@ pluginName=Eclipse Data Tools Platform IBM DB2 UDB zSeries UI Plug-in
 providerName=Eclipse.org
 
 profile.db2.zseries.wizard.title = DB2 for z/OS
+profile.db2.zseries.wizard.description = Create a DB2 for z/OS connection profile.
 profile.db2.zseries.properties = DB2 for z/OS Connection Properties
