--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/plugin.xml
@@ -9,6 +9,7 @@
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.enablement.ibm.db2.zseries.NewZSeriesConnectionProfileWizard"
             name="%profile.db2.zseries.wizard.title"
+            description = "%profile.db2.zseries.wizard.description"
             profile="org.eclipse.datatools.enablement.ibm.db2.zseries.connectionProfile"/>
    </extension>
    <extension
