[207859]  Added descriptions for various connection profile wizards

--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -25,3 +25,4 @@ driver.description = JDBC driver for a Hypersonic DB
 connection.factory = HSQLDB Connection Factory
 connection.profile = HSQLDB Connection Profile
 connection.profile.newwizard = HSQLDB Connection Profile
+connection.profile.newwizard.description = Create a Hypersonic DB connection profile.
