--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.xml
@@ -97,6 +97,7 @@
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.enablement.hsqldb.connectionProfile.NewConnectionProfileWizard"
             name="%connection.profile.newwizard"
+            description = "%connection.profile.newwizard.description"
             profile="org.eclipse.datatools.enablement.hsqldb.connectionProfile"/>
    </extension>
 
