[207859]  Added descriptions for various connection profile wizards

--- a/plugins/org.eclipse.datatools.enablement.postgresql.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.postgresql.ui/plugin.xml
@@ -10,6 +10,7 @@
             icon="icons/new_postgresql_cp_element.gif"
             id="org.eclipse.datatools.enablement.postgresql.profile.NewConnectionProfileWizard"
             name="%WIZARD_NAME"
+            description = "%WIZARD_DESCRIPTION"
             profile="org.eclipse.datatools.enablement.postgresql.connectionProfile"/>
    </extension>
    <!-- Property page for this connection profile -->
