[207859]  Added descriptions for various connection profile wizards

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/plugin.xml
@@ -100,6 +100,7 @@
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.connectivity.db.derby.embedded.NewConnectionProfileWizard"
             name="%DERBY_EMBEDDED_CONNECTION_PROFILE_WIZARD_NAME"
+            description = "%DERBY_EMBEDDED_CONNECTION_PROFILE_WIZARD_DESCRIPTION"
             profile="org.eclipse.datatools.connectivity.db.derby.embedded.connectionProfile"/>
    </extension>
    <extension
