--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.properties
@@ -3,3 +3,4 @@ Bundle-Vendor = Eclipse.org
 Bundle-Name = Eclipse Data Tools Platform Generic DB UI Plug-in
 page.name.jdbcConnectionProperties = JDBC Connection Properties
 wizard.name = Generic JDBC Connection
+wizard.description = Create a Generic JDBC connection profile.
