[207849]  Various accessibility and cosmetic issues in connectivity dialogs,wizards

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
@@ -5,13 +5,13 @@ NewConnectionProfileWizard.error.msg = An exception occurred while creating a ne
 
 GenericDBProfileDetailsWizardPage.title = Specify a Driver and Connection Details
 GenericDBProfileDetailsWizardPage.msg = Select a driver from the drop-down and provide login details for the connection.
-GenericDBProfileDetailsWizardPage.driverCombo.label = Select a driver from the drop-down:
+GenericDBProfileDetailsWizardPage.driverCombo.label = Drivers:
 GenericDBProfileDetailsWizardPage.databaseName.label = Database:
 GenericDBProfileDetailsWizardPage.url.label = URL:
 GenericDBProfileDetailsWizardPage.PingButton=Test connection
 GenericDBProfileDetailsWizardPage.userName.label = User name:
 GenericDBProfileDetailsWizardPage.password.label = Password:
-GenericDBProfileDetailsWizardPage.persistpassword.label = Save Password
+GenericDBProfileDetailsWizardPage.persistpassword.label = Save password
 GenericDBProfileDetailsWizardPage.optionalProps.label = Optional properties:
 GenericDBProfileDetailsWizardPage.summary.driverName.label = Driver name
 GenericDBProfileDetailsWizardPage.summary.connProps.label = Connection properties
