--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -7,22 +7,22 @@ USER_ID_PROPERTY_NAME=User ID
 PASSWORD_PROPERTY_NAME=Password
 
 Bundle-Vendor = Eclipse.org
-Bundle-Name = Eclipse Data Tools Platform Hypersonic DB Enablement Plug-in
+Bundle-Name = Eclipse Data Tools Platform HSQLDB Enablement Plug-in
 profile.page.name = HSQLDB Profile Properties
 navigator.content.name = HSQLDB Profile Content Extension
 
 product.display.string = HSQLDB
 product.display.version.string = 1.8
-product.display.description = Hypersonic DB DataTools Connection Profile
+product.display.description = HSQLDB Connection Profile
 
-driver.category.name = Hypersonic DB
-driver.category.description = Hypersonic DB DataTools JDBC Drivers
+driver.category.name = HSQLDB
+driver.category.description = HSQLDB JDBC Drivers
 driver.version.category.name = 1.8
-driver.version.category.description = Hypersonic DB DataTools JDBC Drivers for Version 1.8
-driver.name = Hypersonic DB
-driver.description = JDBC driver for a Hypersonic DB
+driver.version.category.description = HSQLDB JDBC Drivers for Version 1.8
+driver.name = HSQLDB
+driver.description = JDBC driver for HSQLDB
 
 connection.factory = HSQLDB Connection Factory
 connection.profile = HSQLDB Connection Profile
-connection.profile.newwizard = HSQLDB Connection Profile
-connection.profile.newwizard.description = Create a Hypersonic DB connection profile.
+connection.profile.newwizard = HSQLDB
+connection.profile.newwizard.description = Create a HSQLDB connection profile.
