[207849]  Various accessibility and cosmetic issues in connectivity dialogs,wizards

--- a/plugins/org.eclipse.datatools.enablement.postgresql.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql.ui/plugin.properties
@@ -1,3 +1,3 @@
-WIZARD_NAME=PostgreSQL JDBC Connection
+WIZARD_NAME=PostgreSQL
 WIZARD_DESCRIPTION = Create a PostgreSQL connection profile.
 PAGE_NAME_POSTGRESQL_CONNECTION_PROPERTIES=PostgreSQL Connection Properties
