[207849]  Various accessibility and cosmetic issues in connectivity dialogs,wizards

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/plugin.properties
@@ -11,7 +11,7 @@
 pluginName=Eclipse Data Tools Platform Apache Derby UI Plug-in
 providerName=Eclipse.org
 
-DERBY_EMBEDDED_CONNECTION_PROFILE_WIZARD_NAME=Derby Embedded Database
+DERBY_EMBEDDED_CONNECTION_PROFILE_WIZARD_NAME=Derby
 DERBY_EMBEDDED_CONNECTION_PROFILE_WIZARD_DESCRIPTION = Create a Derby connection profile.
 DERBY_EMBEDDED_DB_PROPERTY_PAGE_NAME=JDBC Connection Properties
 
