--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -9,6 +9,7 @@ driverConnectionURL = Connection URL
 driverUID = User ID
 driverPWD = Password
 org.eclipse.datatools.connectivity.db.driverCategory = Database
+org.eclipse.datatools.connectivity.db.generic.genericDriverCategory = Generic JDBC
 org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate = Generic JDBC Driver
 databases.category = Databases
 generic.profile.name = SQL Model-JDBC Connection
