[207849]  Various accessibility and cosmetic issues in connectivity dialogs,wizards

--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -19,10 +19,10 @@ driver.category.name = HSQLDB
 driver.category.description = HSQLDB JDBC Drivers
 driver.version.category.name = 1.8
 driver.version.category.description = HSQLDB JDBC Drivers for Version 1.8
-driver.name = HSQLDB
+driver.name = HSQLDB JDBC Driver
 driver.description = JDBC driver for HSQLDB
 
 connection.factory = HSQLDB Connection Factory
 connection.profile = HSQLDB Connection Profile
 connection.profile.newwizard = HSQLDB
-connection.profile.newwizard.description = Create a HSQLDB connection profile.
+connection.profile.newwizard.description = Create an HSQLDB connection profile.
