--- a/examples/org.eclipse.datatools.sqltools.sqlbuilder.examples/plugin.xml
+++ b/examples/org.eclipse.datatools.sqltools.sqlbuilder.examples/plugin.xml
@@ -19,14 +19,35 @@
                class="org.eclipse.datatools.sqltools.sqlbuilder.examples.actions.SQLBuilderDialogFileAction"
                enablesFor="1"
                id="org.eclipse.datatools.sqltools.sqlbuilder.examples.sqlbuilderdialogfileaction"
-               label="Open File"
+               label="Open SQLBuilderFileEditorInput"
                menubarPath="org.eclipse.datatools.sqltools.sqlbuilder.examples.dialogmenu/group1">
          </action>
          <action
                class="org.eclipse.datatools.sqltools.sqlbuilder.examples.actions.SQLBuilderDialogStorageAction"
                enablesFor="1"
                id="org.eclipse.datatools.sqltools.sqlbuilder.examples.sqlbuilderdialogstorageaction"
-               label="Open StorageInput"
+               label="Open SQLBuilderStorageEditorInput"
+               menubarPath="org.eclipse.datatools.sqltools.sqlbuilder.examples.dialogmenu/group1">
+         </action>
+         <action
+               class="org.eclipse.datatools.sqltools.sqlbuilder.examples.actions.SQLBuilderDialogEditorInputAction"
+               enablesFor="1"
+               id="org.eclipse.datatools.sqltools.sqlbuilder.examples.sqlbuilderdialogeditorinputaction"
+               label="Open SQLBuilderEditorInput"
+               menubarPath="org.eclipse.datatools.sqltools.sqlbuilder.examples.dialogmenu/group1">
+         </action>
+         <action
+               class="org.eclipse.datatools.sqltools.sqlbuilder.examples.actions.SQLBuilderDialogNewStmtEditorInputAction"
+               enablesFor="1"
+               id="org.eclipse.datatools.sqltools.sqlbuilder.examples.sqlbuilderdialognewstmteditorinputaction"
+               label="Create new SELECT statement using SQLBuilderEditorInput"
+               menubarPath="org.eclipse.datatools.sqltools.sqlbuilder.examples.dialogmenu/group1">
+         </action>
+         <action
+               class="org.eclipse.datatools.sqltools.sqlbuilder.examples.actions.SQLBuilderDialogDialectTestEditorInputAction"
+               enablesFor="*"
+               id="org.eclipse.datatools.sqltools.sqlbuilder.examples.sqlbuilderdialogdialecttesteditorinputaction"
+               label="Open statement created for different dialect"
                menubarPath="org.eclipse.datatools.sqltools.sqlbuilder.examples.dialogmenu/group1">
          </action>
       </objectContribution>
