--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -11,6 +11,7 @@
    <extension-point id="catalog" name="%CatalogExtensionPointName" schema="schema/catalog.exsd"/>
    <extension-point id="databaseRecognition" name="%DatabaseRecognition" schema="schema/databaseRecognition.exsd"/>
    <extension-point id="overrideLoader" name="overrideLoader" schema="schema/overrideLoader.exsd"/>
+   <extension-point id="metaDataExtension" name="metaDataExtension" schema="schema/metaDataExtension.exsd"/>
 
    <extension
          point="org.eclipse.datatools.connectivity.sqm.core.logicalContainment">
