[206966] Added extension point for external load and extract in Table editor (patch submitted by Quy On).  Set bundle-version to 1.1.0.200710311.  Incremented minor version since API has changed.

--- a/plugins/org.eclipse.datatools.sqltools.data.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.data.ui/plugin.xml
@@ -57,4 +57,6 @@
    </extension>
 
     <extension-point id="externalTableDataEditor" name="External Table Data Editors" schema="schema/externalTableDataEditor.exsd"/>
+    <extension-point id="externalTableDataExtract" name="External support for Table Data Extract" schema="schema/externalTableDataExtract.exsd"/>
+    <extension-point id="externalTableDataLoad" name="External support for Table Data Load" schema="schema/externalTableDataLoad.exsd"/>
 </plugin>
