--- a/plugins/org.eclipse.datatools.enablement.postgresql.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.postgresql.ui/plugin.xml
@@ -30,4 +30,13 @@
          </enabledWhen>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.driverPropertyEditor">
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.postgresql.postgresqlDriverTemplate"
+            id="org.eclipse.datatools.enablement.postgresql.postgresqlDriverTemplate.password">
+      </propertyEditor>
+   </extension>
 </plugin>
