--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.xml
@@ -23,5 +23,32 @@
                value="org.eclipse.datatools.enablement.msft.sqlserver.connectionProfile"/>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.driverPropertyEditor">
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2005.driverTemplate"
+            id="org.eclipse.datatools.enablement.msft.sqlserver.2005.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2000.driverTemplate"
+            id="org.eclipse.datatools.enablement.msft.sqlserver.2000.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2005.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.msft.sqlserver.2005.other.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2000.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.msft.sqlserver.2000.other.driverTemplate.password">
+      </propertyEditor>
+   </extension>
    
  </plugin>  
