--- a/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.xml
@@ -23,5 +23,44 @@
                value="org.eclipse.datatools.enablement.oracle.connectionProfile"/>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.driverPropertyEditor">
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.10.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.10.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.9.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.9.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.8.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.8.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.10.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.10.other.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.9.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.9.other.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.8.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.8.other.driverTemplate.password">
+      </propertyEditor>
+   </extension>
   
  </plugin>  
