--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/plugin.xml
@@ -24,4 +24,25 @@
                value="org.eclipse.datatools.enablement.ibm.db2.iseries.connectionProfile"/>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.driverPropertyEditor">
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.db2.iseries.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.db2.iseries.other.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.db2.iseries.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.db2.iseries.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.db2.iseries.toolbox.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.db2.iseries.toolbox.driverTemplate.password">
+      </propertyEditor>
+   </extension>
  </plugin>  
