--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.xml
@@ -23,5 +23,20 @@
                value="org.eclipse.datatools.enablement.ibm.db2.luw.connectionProfile"/>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.driverPropertyEditor">
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.db2.luw.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.db2.luw.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.db2.luw.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.db2.luw.other.driverTemplate.password">
+      </propertyEditor>
+   </extension>
  
  </plugin>  
