DTP 1.6 ljulien BZ # 208942 - Ability to extend the Catalog Metadata Sorting

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -17,6 +17,7 @@ providerName=Eclipse.org
 LABEL_SERVICE_EXTENSION_POINT_NAME=labelService
 ELEMENT_ID_EXTENSION_POINT_NAME=elementID
 MARKER_NAVIGATION_PROVIDER_EXTENSION_POINT_NAME=markerNavigationProvider
+DATA_SOURCE_EXPLORER_SORTER=sorterValidatorProvider
 
 #
 ## Model Explorer Selection
