--- a/plugins/org.eclipse.datatools.sqltools.tabledataeditor/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.tabledataeditor/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
+   <extension-point id="externalRunQuery" name="External Run Query" schema="schema/externalRunQuery.exsd"/>
 	<!-- Sample Content Menu -->
 	<extension point="org.eclipse.ui.navigator.viewer">
 		<viewerActionBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
