--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -144,3 +144,27 @@ DriverPropertyEditorDescriptor.InvalidID = Driver Property Editor descriptor is 
 DriverPropertyEditorDescriptor.InvalidTargetTemplateID = Driver Property Editor descriptor is missing a valid target template ID
 DriverPropertyEditorDescriptor.InvalidTargetPropertyId = Driver Property Editor descriptor is missing a valid target property ID
 DriverPropertyEditorDescriptor.InvalidCustomPropertyEditorClass = Driver Property Editor descriptor is missing a valid custom property editor
+
+ExtensibleProfileDetailsWizardPage.title = Specify a Driver and Connection Details
+ExtensibleProfileDetailsWizardPage.description = Select a driver from the drop-down and provide login details for the connection.
+ExtensibleProfileDetailsWizardPage.driverCombo.label = &Drivers:
+ExtensibleNewConnectionProfileWizard.title = New Connection Profile
+
+DriverUIContributorComposite.group = &Properties
+
+OtherDriverUIContributor.generaltab = General
+OtherDriverUIContributor.optionaltab = Optional
+OtherDriverUIContributor.databaseName.label = D&atabase:
+OtherDriverUIContributor.url.label = &URL:
+OtherDriverUIContributor.userName.label = U&ser name:
+OtherDriverUIContributor.password.label = &Password:
+OtherDriverUIContributor.persistpassword.label = Sa&ve password
+OtherDriverUIContributor.optionalProps.label = Additional properties:
+OtherDriverUIContributor.summaryData.database = Database
+OtherDriverUIContributor.summaryData.username = User name
+OtherDriverUIContributor.summaryData.url = URL
+
+OtherDriverUIContributor.errormessage.requiresdatabase = Enter a database name.
+OtherDriverUIContributor.errormessage.requiresurl = Enter a URL.
+OtherDriverUIContributor.errormessage.requiresusername = Enter a user name.
+
